# MyRpg

./: CMakeLists.txt  Makefile  README.md  my_rpg
include/: my.h  my_rpg.h  my_rpg_struct.h
lib/my/: Makefile  my_itoa.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_str_to_word_array.c  my_strlen.c
src/: audio_settings.c  help.c  help_flag.c  main.c  quit.c
src/free/: free_all.c  free_game.c  free_select.c
src/scenes/champ_selec/: champ_select.c  display_champ.c
src/scenes/combat/: attack_mage.c  attack_warrior.c  combat.c  display_combat.c  event_combat.c
src/scenes/death/: death.c  death_event.c
src/scenes/game/: display_game.c  event_game.c  game.c  hitbox_management.c  move.c  particles.c
src/scenes/inventory/: inventory.c  inventory2.c
src/scenes/pause/: animation_pause.c  pause.c
src/scenes/settings/: button_animation_s.c  button_animation_s2.c  display_setting.c  mute.c  option.c  option2.c  setting_menu.c
src/scenes/starting_menu/: button_animation.c  display_menu.c  starting_menu.c
src/scenes/victory/: victory.c  victory_event.c
src/struct/: init_audio.c  init_combat.c  init_combat_text.c  init_death.c  init_enemy_combat.c  init_game.c  init_help.c  init_inventory.c  init_menu.c  init_pause.c  init_scale_combat.c  init_select.c  init_settings.c  init_sprites.c  init_stat_array.c  init_struct.c  init_time.c  init_victory.c
