cmake_minimum_required(VERSION 3.16)
project(MUL_my_rpg_2019 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)

add_executable(MUL_my_rpg_2019
        include/my.h
        include/my_rpg.h
        include/my_rpg_struct.h
        lib/my/my_itoa.c
        lib/my/my_put_nbr.c
        lib/my/my_putchar.c
        lib/my/my_putstr.c
        lib/my/my_str_to_word_array.c
        lib/my/my_strlen.c
        src/free/free_all.c
        src/free/free_game.c
        src/scenes/champ_selec/champ_select.c
        src/scenes/champ_selec/display_champ.c
        src/scenes/combat/attack_mage.c
        src/scenes/combat/attack_warrior.c
        src/scenes/combat/combat.c
        src/scenes/combat/display_combat.c
        src/scenes/combat/event_combat.c
        src/scenes/death/death.c
        src/scenes/death/death_event.c
        src/scenes/game/display_game.c
        src/scenes/game/event_game.c
        src/scenes/game/game.c
        src/scenes/game/hitbox_management.c
        src/scenes/game/move.c
        src/scenes/game/particles.c
        src/scenes/inventory/inventory.c
        src/scenes/inventory/inventory2.c
        src/scenes/pause/animation_pause.c
        src/scenes/pause/pause.c
        src/scenes/settings/button_animation_s.c
        src/scenes/settings/button_animation_s2.c
        src/scenes/settings/display_setting.c
        src/scenes/settings/mute.c
        src/scenes/settings/option.c
        src/scenes/settings/option2.c
        src/scenes/settings/setting_menu.c
        src/scenes/starting_menu/button_animation.c
        src/scenes/starting_menu/display_menu.c
        src/scenes/starting_menu/starting_menu.c
        src/scenes/victory/victory.c
        src/scenes/victory/victory_event.c
        src/struct/init_audio.c
        src/struct/init_combat.c
        src/struct/init_combat_text.c
        src/struct/init_death.c
        src/struct/init_enemy_combat.c
        src/struct/init_game.c
        src/struct/init_help.c
        src/struct/init_inventory.c
        src/struct/init_menu.c
        src/struct/init_pause.c
        src/struct/init_scale_combat.c
        src/struct/init_select.c
        src/struct/init_settings.c
        src/struct/init_sprites.c
        src/struct/init_stat_array.c
        src/struct/init_struct.c
        src/struct/init_time.c
        src/struct/init_victory.c
        src/help.c
        src/help_flag.c
        src/main.c
        src/quit.c)
